--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ Click==7.0
 Flask==1.0.2
 idna==2.7
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2>=2.10.1
 MarkupSafe==1.0
 requests==2.19.1
 six==1.11.0
-urllib3==1.23
+urllib3>=1.24.2
 uWSGI==2.0.17.1
-Werkzeug==0.14.1
+Werkzeug>=0.15.3
